--- a/src/style.css
+++ b/src/style.css
@@ -9,18 +9,29 @@ body {
 
 #grid-container {
     display: grid;
-    grid-template-columns: repeat(4, 50px);
-    grid-template-rows: repeat(4, 50px);
-    gap: 5px;
+    grid-template-columns: repeat(4, 40px);
+    grid-template-rows: repeat(4, 40px);
+    gap: 10px;
 }
 
 .grid-item {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     background-color: #fff;
-    border: 1px solid #ccc;
+    border: 1px solid #aaa;
+    border-radius: 5px;
+    transition: all 0.2s ease-in-out;
+}
+
+.grid-item:hover {
+    transform: scale(1.05);
+}
+
+.grid-item:active {
+    transform: scale(0.95);
 }
 
 .grid-item.checked {
-    background-color: #000;
+    background-color: #a2d2ff;
+    border: 1px solid #5CB0FF;
 }
